styles.css
@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@500;700&family=Poppins:wght@400;700&display=swap');

* {
    padding: 0;
    margin: 0;
    box-sizing: border-box;
    font-family: "Poppins";
}

/** Nav Bar Styles **/

body,nav,main,#aboutUs,#whyChooseUs,#ourServices,#CTA,#contactUs{
    width: 100vw;
}

nav {
    display: flex;
    justify-content: space-between;
    align-items: center;
    padding: 0.5em;
    background-color: #FDFFFC;
    position: fixed;
    top: 0;
    z-index: 100;
    width: 100vw;

}

.logo {
    height: 40px;
}

.logo-container {
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
}

a {
    text-decoration: none !important;
    color: black;
}

.logo-text {
    font-size: 16px;
    color: #000;
}

ul {
    list-style-type: none;
}

.nav-links {
    display: flex;
    justify-content: center;
    align-items: center;
    gap: 20px;
    max-width: 90%;
    min-width: 60%;
}

.link {
    color: black;
}

/** Hero Section **/
.hero-section {
    height: calc(100vh - calc(1em+50px));
    width: 100vw;
    background-image: url('./Assets/Hero-Section.jpg');
    background-size: cover;
    position: relative;
    text-align: center;
    color: #fff;
    display: flex;
    justify-content: center;
    align-items: center;
}

.hero-section::after {
    content: "";
    position: absolute;
    top: 0;
    left: 0;
    right: 0;
    bottom: 0;
    background-color: rgba(0, 0, 0, 0.4);
    z-index: 1;
}

.hero-section-content {
    z-index: 10;
}

.title {
    font-weight: 800;
    font-size: 80px;
}

.button-link {
    color: white !important;
}

/** About Us Section **/

.about-us-section {
    padding: 20px;
}

h1 {
    font-weight: 800;
}

.about-us-image {
    width: 50%;
}

.about-us-heading {
    font-weight: 700;
}

a:hover {
    color: #4EDDDB;
}

/** Why Choose Us Section **/

.why-choose-us-section {
    background-color: #201521;
    padding: 1em;
}

.WCU-Section-Heading {
    font-weight: 700;
    color: #fff;
}

.wcu-section-card {
    background-color: #AD4057;
    border-radius: 8px;
    margin: 10px;
}

.heading {
    font-weight: 600;
}

.card-image {
    width: 100%;
    height: 240px;
    border-top-right-radius: 10px;
    border-top-left-radius: 10px;
}

.card-image:hover {
    width: 100%;
}

.card-content {
    padding: 20px;
    color: white;
}

h1 {
    font-weight: bolder;
}

.bold {
    color: #4C8E8D;
    font-weight: 600;
}

/** Services Section **/

.services-section {
    padding: 20px;
}

.service-image {
    width: 100%;
    border-radius: 8px;
}

.service-card {
    width: 95%;
    margin: auto;
}

.service-card-content {
    padding: 10px 0;
}

.service-name {
    font-weight: 700;
    font-size: 25px;
}

/** CTA Section **/

.cta-section{
    display: flex;
    justify-content: center;
    align-items: center;
    padding: 20px;
    height: 25vh;
    position: relative;
}
.overlay {
    top: 0;
    left: 0;
    bottom: 0;
    right: 0;
    z-index: 2;
    background: rgba(0,0,0,0.6);
    position: absolute;
  }
#background-video {
    object-fit: cover;
    position: absolute;
    width: 100%;
    height: 100%;
    z-index: 1;
}

.cta-content{
    z-index: 3;
    color:#fff;
    text-align: center;
}
 
/** Contact Us Section **/

.contact-section {
    background-color: #f8f8f8;
    padding: 40px;
  }
  
  .contact-section h2 {
    font-size: 24px;
    margin-bottom: 20px;
  }
  
  .contact-form input,
  .contact-form textarea {
    width: 100%;
    padding: 10px;
    margin-bottom: 15px;
    border: 1px solid #ddd;
  }
  
  .contact-form input[type="submit"] {
    background-color: #007bff;
    color: #fff;
    border: none;
    cursor: pointer;
  }
  
  .contact-form input[type="submit"]:hover {
    background-color: #0056b3;
  }

/** footer **/

footer{
    text-align: center;
    padding: 10px;
}

/** Mobile Specific Styling **/
@media screen and (max-width:767px) {

    .nav-links,
    .hide-in-mobile {
        display: none;
    }

    .hero-section {
        background-position: -200px;
    }

    .title {
        font-size: 40px;
    }

    .tagline {
        font-size: 20px;
        margin-bottom: 20px;
    }

    .about-us-image {
        width: 98%;
        margin: auto;
    }

    .wcu-section-card {
        width: 85%;
        margin: 15px auto;
    }
    .contact-form input,
    .contact-form textarea {
      width: calc(100% - 20px);
    }
}

/** Laptop & Tablet Specific Styling **/
@media screen and (min-width:768px) {
    .hide-in-laptop {
        display: none;
    }

    .about-us-section {
        display: flex;
        justify-content: center;
        align-items: center;
    }

    .wcu-section-card {
        width: 45%;
        min-height: 500px;
    }

    .wcu-section-cards-container {
        display: flex;
        justify-content: center;
        align-items: center;
        flex-wrap: wrap;
    }

    .service-card {
        display: flex;
        justify-content: center;
        align-items: center;
        margin: 20px auto;
    }

    .service-image {
        width: 50%;
    }

    .service-card-content {
        width: 50%;
        margin-left: 20px;
    }

    .cta-section{
        height: 35vh;
    }
}

@media screen and (min-width:979px) {
    .wcu-section-card {
        width: 30%;
    }
}

